# purposely-vulnerable

./: README.md  alert.json  output.txt  pr-body.md  prompt.txt  pyproject.toml  vulnerable_app.py
.claude/skills/vulnerability-remediation/: SKILL.md
.github/workflows/: codeql.yml  test-autofixer.yml
