[tool.poetry]
name = "purposely-vulnerable"
version = "0.1.0"
description = "Purposely vulnerable Python application for testing security scanning tools"
authors = ["Security Testing <test@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

